--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,14 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/cityName"
+            android:id="@+id/etCityName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="6"
+            android:textSize="15dp"
             android:inputType="text"
             android:hint="Add city to search"
-            android:labelFor="@id/cityName"
+            android:labelFor="@id/etCityName"
             android:maxLines="1" />
 
         <ImageButton
@@ -37,7 +38,7 @@
             android:layout_weight="1"
             android:src="@android:drawable/ic_menu_search"
             android:contentDescription="@string/btnFindCity"
-            android:onClick="obtenerTodasCiudades" />
+            android:onClick="getByCity" />
 
         <ImageButton
             android:layout_width="0dp"
@@ -45,7 +46,7 @@
             android:layout_weight="1"
             android:src="@android:drawable/ic_menu_sort_alphabetically"
             android:contentDescription="@string/btnFindAllCities"
-            android:onClick="obtenerTodasCiudades" />
+            android:onClick="getAllCities" />
     </LinearLayout>
 
     <ScrollView
@@ -80,7 +81,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/logoutButton"
+            android:id="@+id/btnLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
