--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,14 @@
         android:layout_width="match_parent"
         android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:enabled="true"
+            android:text="@string/send_button_label"/>
+
         <TextView
             android:id="@+id/tvLoggedUser"
             android:layout_width="wrap_content"
