--- a/app/src/main/res/layout/activity_city_detail.xml
+++ b/app/src/main/res/layout/activity_city_detail.xml
@@ -16,4 +16,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:id="@+id/lvCityDetail"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"/>
+
 </LinearLayout>
