--- a/app/src/main/res/layout/activity_city_detail.xml
+++ b/app/src/main/res/layout/activity_city_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CityDetail">
+    tools:context=".LocationDetail">
 
     <ListView
         android:id="@+id/lvLocationDetailList"
