--- a/app/src/main/res/layout/activity_locations_item.xml
+++ b/app/src/main/res/layout/activity_locations_item.xml
@@ -6,22 +6,21 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvListPosition"
+        android:id="@+id/tvLocationListPosition"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
         android:gravity="center_horizontal"
         android:textStyle="bold"
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/tvListCityName"
+        android:id="@+id/tvLocationListLocationCode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_weight="2"
         android:gravity="center_horizontal"
         android:textStyle="bold"
         android:textAlignment="center" />
-
 
 </LinearLayout>
