Add latitude and longitude to Locations List

--- a/app/src/main/res/layout/activity_locations_item.xml
+++ b/app/src/main/res/layout/activity_locations_item.xml
@@ -23,4 +23,24 @@
         android:textStyle="bold"
         android:textAlignment="center" />
 
+    <TextView
+        android:id="@+id/tvLocationListLocationLatitude"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/tvLocationListLocationLongitude"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
+
+
 </LinearLayout>
