--- a/app/src/main/res/layout/activity_location_detail_item.xml
+++ b/app/src/main/res/layout/activity_location_detail_item.xml
@@ -6,19 +6,46 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvDetailListPosition"
+        android:id="@+id/tvDetailPosition"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:gravity="center_horizontal"
         android:textStyle="bold"
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/tvDetailListLocationCode"
+        android:id="@+id/tvDetailParameter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/tvDetailValue"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.5"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/tvDetailUnit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.5"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/tvDetailLastUpdate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
         android:gravity="center_horizontal"
         android:textStyle="bold"
         android:textAlignment="center" />
