--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -6,6 +6,59 @@
     android:orientation="vertical"
     tools:context=".LocationDetail">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/tvPositionHeader"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:gravity="center_horizontal"
+            android:text="@string/txtLocationDetailsPosition" />
+
+        <TextView
+            android:id="@+id/tvParameterHeader"
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:gravity="center_horizontal"
+            android:text="@string/txtLocationDetailsParameter" />
+
+        <TextView
+            android:id="@+id/tvValueHeader"
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/txtLocationDetailsValue" />
+
+        <TextView
+            android:id="@+id/tvUnitsHeader"
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/txtLocationDetailsUnits" />
+
+        <TextView
+            android:id="@+id/tvLastUpdateHeader"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/txtLocationDetailsLastUpdate" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/lvLocationDetailList"
         android:layout_width="match_parent"
