--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,36 +16,30 @@
     <LinearLayout
         android:id="@+id/searchRow"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Search Menu"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/etCityName"
+        <TextView
+            android:id="@+id/etUpdateCities"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="6"
-            android:textSize="15dp"
-            android:inputType="text"
-            android:hint="Add city to search"
-            android:labelFor="@id/etCityName"
-            android:maxLines="1" />
+            android:textSize="30sp"
+            android:text="@string/btnFindAllCities"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:gravity="center_vertical" />
 
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_menu_search"
-            android:contentDescription="@string/btnFindCity" />
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@android:drawable/ic_menu_sort_alphabetically"
+            android:background="@color/colorWhite"
+            android:text="@string/btnFindAllCities"
+            android:src="@mipmap/map"
             android:contentDescription="@string/btnFindAllCities"
             android:onClick="getAllCities" />
+
     </LinearLayout>
 
     <ListView
@@ -54,63 +48,50 @@
         android:layout_height="0dp"
         android:layout_weight="7"/>
 
-
-    <!--
-            <ScrollView
-                android:layout_height="0dp"
-                android:layout_weight="5"
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:id="@+id/tvResponse"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </ScrollView>
-        -->
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/userLogin"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/ibUploadToCloud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:enabled="true"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:background="@color/colorWhite"
+            android:src="@mipmap/cloud"
+            android:layout_alignParentLeft="true"/>
+
+        <TextView
+            android:id="@+id/etUploadCloud"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/btnUploadCloud"
+            android:gravity="center_vertical"
+            android:layout_below="@id/ibUploadToCloud" />
+
         <Button
-            android:id="@+id/sendButton"
+            android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:enabled="true"
-            android:text="@string/send_button_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLoggedUser"/>
+            android:gravity="center"
+            android:text="@string/logout_button"
+            android:layout_alignParentRight="true"/>
 
         <TextView
             android:id="@+id/tvLoggedUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"            android:gravity="center"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/btnLogout" />
 
-        <Button
-            android:id="@+id/btnLogout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="center"
-            android:text="@string/logout_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLoggedUser" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
 
