Add tolerance levels for each AQI parameter Add an image with the AQI status

--- a/app/src/main/res/layout/activity_location_detail_item.xml
+++ b/app/src/main/res/layout/activity_location_detail_item.xml
@@ -50,4 +50,11 @@
         android:textStyle="bold"
         android:textAlignment="center" />
 
+    <ImageView
+        android:id="@+id/ivDetailAQILocationDetail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center_horizontal" />
+
 </LinearLayout>
