--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -57,6 +57,15 @@
             android:textSize="16sp"
             android:text="@string/txtLocationDetailsLastUpdate" />
 
+        <ImageView
+            android:id="@+id/ivAQIHeader"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/txtLocationDetailsAQI" />
+
     </LinearLayout>
 
     <ListView
