--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/ibUploadToCloud"
+            android:id="@+id/ibUploadToCloudAllCities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:enabled="true"
@@ -72,7 +72,7 @@
             android:layout_height="match_parent"
             android:text="@string/btnUploadCloud"
             android:gravity="center_vertical"
-            android:layout_below="@id/ibUploadToCloud" />
+            android:layout_below="@id/ibUploadToCloudAllCities" />
 
         <Button
             android:id="@+id/btnLogout"
