--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -9,53 +9,58 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/tvPositionHeader"
             android:layout_width="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:gravity="center_horizontal"
-            android:text="@string/txtLocationDetailsPosition" />
+            android:text="@string/txtLocationDetailsPosition"
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/tvParameterHeader"
             android:layout_width="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:gravity="center_horizontal"
-            android:text="@string/txtLocationDetailsParameter" />
+            android:text="@string/txtLocationDetailsParameter"
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/tvValueHeader"
             android:layout_width="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="16sp"
-            android:text="@string/txtLocationDetailsValue" />
+            android:text="@string/txtLocationDetailsValue"
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/tvUnitsHeader"
             android:layout_width="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="16sp"
-            android:text="@string/txtLocationDetailsUnits" />
+            android:text="@string/txtLocationDetailsUnits"
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/tvLastUpdateHeader"
             android:layout_width="0dp"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="16sp"
-            android:text="@string/txtLocationDetailsLastUpdate" />
+            android:text="@string/txtLocationDetailsLastUpdate"
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/ivAQIHeader"
@@ -64,7 +69,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textSize="16sp"
-            android:text="@string/txtLocationDetailsAQI" />
+            android:text="@string/txtLocationDetailsAQI"
+            android:textColor="@color/colorPrimary"/>
 
     </LinearLayout>
 
@@ -72,7 +78,8 @@
         android:id="@+id/lvLocationDetailList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"/>
+        android:layout_weight="7"
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
     <LinearLayout
         android:id="@+id/userLogin"
