--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
         android:id="@+id/lvCityList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"/>
+        android:layout_weight="7"
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
 
     <RelativeLayout
         android:id="@+id/userLogin"
