--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -9,68 +9,68 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvPositionHeader"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="@string/txtLocationDetailsPosition"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvParameterHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:layout_weight="2"
             android:gravity="center_horizontal"
             android:text="@string/txtLocationDetailsParameter"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvValueHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:gravity="center_horizontal"
-            android:textSize="16sp"
             android:text="@string/txtLocationDetailsValue"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvUnitsHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:gravity="center_horizontal"
-            android:textSize="16sp"
             android:text="@string/txtLocationDetailsUnits"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvLastUpdateHeader"
             android:layout_width="0dp"
-            android:layout_weight="4"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:gravity="center_horizontal"
-            android:textSize="16sp"
             android:text="@string/txtLocationDetailsLastUpdate"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/ivAQIHeader"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:gravity="center_horizontal"
-            android:textSize="16sp"
             android:text="@string/txtLocationDetailsAQI"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -78,33 +78,33 @@
         android:id="@+id/lvLocationDetailList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_weight="7" />
 
     <LinearLayout
         android:id="@+id/userLogin"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_width="match_parent"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/ibUploadToCloudDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:enabled="true"
             android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:background="@color/colorWhite"
             android:layout_margin="@dimen/activity_horizontal_margin"
+            android:background="@color/colorWhite"
+            android:enabled="true"
+            android:gravity="center_vertical"
             android:src="@mipmap/cloud" />
 
         <TextView
             android:id="@+id/etUploadCloud"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/btnUploadCloud"
-            android:gravity="center_vertical" />
+            android:gravity="center_vertical"
+            android:text="@string/btnUploadCloud" />
 
     </LinearLayout>
 
