--- a/app/src/main/res/layout/activity_location_detail_item.xml
+++ b/app/src/main/res/layout/activity_location_detail_item.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDetailParameterLocationDetail"
@@ -20,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDetailValueLocationDetail"
@@ -29,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDetailUnitLocationDetail"
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDetailLastUpdateLocationDetail"
@@ -47,8 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="4"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/ivDetailAQILocationDetail"
