--- a/app/src/main/res/layout/activity_locations_item.xml
+++ b/app/src/main/res/layout/activity_locations_item.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvLocationListLocationCode"
@@ -20,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvLocationListLocationAddress"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="6"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
 </LinearLayout>
