--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -24,21 +23,21 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6"
-            android:textSize="30sp"
+            android:gravity="center_vertical"
             android:text="@string/btnFindAllCities"
             android:textAlignment="center"
-            android:textStyle="bold"
-            android:gravity="center_vertical" />
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorWhite"
-            android:text="@string/btnFindAllCities"
-            android:src="@mipmap/map"
             android:contentDescription="@string/btnFindAllCities"
-            android:onClick="getAllCities" />
+            android:onClick="getAllCities"
+            android:src="@mipmap/map"
+            android:text="@string/btnFindAllCities" />
 
     </LinearLayout>
 
@@ -46,51 +45,51 @@
         android:id="@+id/lvCityList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_weight="7" />
 
     <RelativeLayout
         android:id="@+id/userLogin"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_width="match_parent"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/ibUploadToCloudAllCities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:enabled="true"
+            android:layout_alignParentLeft="true"
             android:layout_gravity="center"
-            android:gravity="center_vertical"
             android:background="@color/colorWhite"
-            android:src="@mipmap/cloud"
-            android:layout_alignParentLeft="true"/>
+            android:enabled="true"
+            android:gravity="center_vertical"
+            android:src="@mipmap/cloud" />
 
         <TextView
             android:id="@+id/etUploadCloud"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/btnUploadCloud"
+            android:layout_below="@id/ibUploadToCloudAllCities"
             android:gravity="center_vertical"
-            android:layout_below="@id/ibUploadToCloudAllCities" />
+            android:text="@string/btnUploadCloud" />
 
         <Button
             android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_gravity="bottom"
             android:gravity="center"
-            android:text="@string/logout_button"
-            android:layout_alignParentRight="true"/>
+            android:text="@string/logout_button" />
 
         <TextView
             android:id="@+id/tvLoggedUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_below="@id/btnLogout"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/btnLogout" />
+            android:gravity="center_vertical" />
 
     </RelativeLayout>
 
