--- a/app/src/main/res/layout/activity_main_item.xml
+++ b/app/src/main/res/layout/activity_main_item.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvListCityName"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="5"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
 </LinearLayout>
