--- a/app/src/main/res/layout/activity_locations_item.xml
+++ b/app/src/main/res/layout/activity_locations_item.xml
@@ -28,8 +28,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="6"
-        android:gravity="center_horizontal"
-        android:textAlignment="center"
+        android:gravity="left"
+        android:textAlignment="gravity"
         android:textStyle="bold" />
 
 </LinearLayout>
